--- a/PPl3/Areas/User/Views/HomeUser/SignUp.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/SignUp.cshtml
@@ -37,14 +37,47 @@
             <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
         </div>*@
                     <span class="content">or use your email for registeration</span>
-                    <input type="text" required placeholder="Account Name" name="account_name">
-                    <input type="email" required placeholder="Email" name="email_address">
-                    @Html.ValidationMessage("Gmail", new { @class = "error-message" })
-                    <input type="password" required placeholder="Password" name="user_password">
+                    @if (Model.account_name != null)
+                    {
+                        <input type="text" required placeholder="Account Name" name="account_name" value="@Model.account_name">
+                    }
+                    else
+                    {
+                        <input type="text" required placeholder="Account Name" name="account_name">
+                    }
+                    @if (ViewBag.email_address != null && ViewBag.signUpOrLogin == 1)
+                    {
+                        <input type="email" required placeholder="Email" name="email_address" value="@ViewBag.email_address">
+                        @Html.ValidationMessage("Gmail", new { @class = "error-message" })
+                    }
+                    else
+                    {
+                        <input type="email" required placeholder="Email" name="email_address">
+                        @Html.ValidationMessage("Gmail", new { @class = "error-message" })
+                    }
+                    @if (Model.user_password != null && ViewBag.signUpOrLogin == 1)
+                    {
+                        <input type="password" required placeholder="Password" name="user_password" value="@Model.user_password">
+                    }
+                    else
+                    {
+                        <input type="password" required placeholder="Password" name="user_password">
+                    }
+                    @if (Model.passport_code != null )
+                    {
+                        <input type="text" required placeholder="Passport Code" name="passport_code" value="@Model.passport_code">
+                        @Html.ValidationMessage("Passport", new { @class = "error-message" })
+                    }
+                    else
+                    {
+                        <input type="text" required placeholder="Passport Code" name="passport_code">
+                        @Html.ValidationMessage("Passport", new { @class = "error-message" })
+
+                    }
                     @*<div style="display: flex;">
-                        <input type="text" placeholder="verification code" name="verification_code" />
-                        <button>Create code</button>
-                    </div>*@
+            <input type="text" placeholder="verification code" name="verification_code" />
+            <button>Create code</button>
+        </div>*@
                     <button>Sign Up</button>
                 </form>
             </div>
@@ -52,16 +85,33 @@
                 <form method="post" action="/user/homeUser/login">
                     <h1>Sign In</h1>
                     @*<div class="social-icons">
-                        <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
-                        <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
-                        <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
-                        <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
-                    </div>*@
+            <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
+            <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
+            <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
+        </div>*@
                     <span class="content">or use your email password</span>
-                    <input type="email" required placeholder="Email" name="email_address">
-                    @Html.ValidationMessage("CheckGmail", new { @class = "error-message" })
-                    <input type="password" required placeholder="Password" name="user_password">
-                    @Html.ValidationMessage("Password", new { @class = "error-message" })
+                    @if (ViewBag.email_address != null && ViewBag.signUpOrLogin == 2)
+                    {
+                        <input type="email" required placeholder="Email" name="email_address" value="@ViewBag.email_address ">
+                        @Html.ValidationMessage("CheckGmail", new { @class = "error-message" })
+                    }
+                    else
+                    {
+                        <input type="email" required placeholder="Email" name="email_address">
+                        @Html.ValidationMessage("CheckGmail", new { @class = "error-message" })
+                    }
+                    @if (Model.user_password != null && ViewBag.signUpOrLogin == 2)
+                    {
+                        <input type="password" required placeholder="Password" name="user_password" value="@Model.user_password">
+                        @Html.ValidationMessage("Password", new { @class = "error-message" })
+                    }
+                    else
+                    {
+                        <input type="password" required placeholder="Password" name="user_password">
+                        @Html.ValidationMessage("Password", new { @class = "error-message" })
+
+                    }
                     <a href="#">Forget Your Password?</a>
                     <button>Sign In</button>
                 </form>
