--- a/PPl3/Areas/User/Views/HomeUser/notification.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/notification.cshtml
@@ -174,10 +174,10 @@
                 success: function (data) {
                     if (data.success == "true") {
                         console.log(data.success);
-                        $('.notification_badge').text(data.count);
-                        $('.notification_badge').css({
-                            'background-color': 'red'
-                        });
+                        //$('.notification_badge').text(data.count);
+                        //$('.notification_badge').css({
+                        //    'background-color': 'red'
+                        //});
                     }
                 },
                 error: function (xhr, status, error) {
