--- a/PPl3/Views/Shared/_LayoutPage1.cshtml
+++ b/PPl3/Views/Shared/_LayoutPage1.cshtml
@@ -8,9 +8,9 @@
     <link href="~/ExtraFiles/assets/css/book_room.css?v=1" rel="stylesheet" />
     <link href="~/ExtraFiles/assets/css/gird.css?v=2" rel="stylesheet" />
     <link href="~/ExtraFiles/assets/css/style_v1.css?v=6" rel="stylesheet" />
-    <link href="~/ExtraFiles/assets/css/seller_profile.css?v=2" rel="stylesheet" />
+    <link href="~/ExtraFiles/assets/css/seller_profile.css?v=3" rel="stylesheet" />
     <link href="~/ExtraFiles/assets/css/Sign_Log_v1.css?v=2" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
 </head>
 <body>
     <div class="main">
