--- a/PPl3/Areas/User/Views/HomeUser/ChatUser.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/ChatUser.cshtml
@@ -12,7 +12,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="~/ExtraFiles/assets/css/gird.css" rel="stylesheet" />
-    <link href="~/ExtraFiles/assets/css/message.css?v=1" rel="stylesheet" />
+    <link href="~/ExtraFiles/assets/css/message.css?v=2" rel="stylesheet" />
     <link href="~/ExtraFiles/assets/css/headerGuest.css?v=1" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQZf3I4TkruOraYvnm7WbRSU3qYV2Lkj3_0w3wfgQrApnsvo-yspjafW8P57Demy0zgf6U&usqp=CAU">
@@ -78,8 +78,8 @@
 
                         <div class="sub_nav sub_nav_user js_sub_nav_user">
                             <ul class="menu_user js_menu_user">
-                                <li class=""><button>Messages</button></li>
-                                <li class=""><button>Notifications</button></li>
+                                <li class=""><a href="">Messages</a></li>
+                                <li class=""><a href="/user/homeuser/notification">Notifications</a></li>
                                 <li class=""><a href="/user/homeuser/trip">Trip</a></li>
                                 <li class=""><a href="/user/homeuser/wishlist">Wishlist</a></li>
                                 <li><a href="/host/HomeHost/Listing">Manage listings</a></li>
@@ -270,7 +270,7 @@
         </div>
     </div>
 
-    <script src="~/ExtraFiles/JS/message.js?v=5"></script>
+    <script src="~/ExtraFiles/JS/message.js?v=6"></script>
     <script src="~/ExtraFiles/JS/menuGuest.js"></script>
     <script src="~/Scripts/jquery-3.7.1.js"></script>
     <script src="~/Scripts/jquery-3.7.1.min.js"></script>
@@ -349,6 +349,9 @@
             loadMessages(receiverUserId, senderId);
             $(`.detail .${senderId} p`).text(message);
             $(`.detail .${receiverUserId} p`).text(message);
+            if (!$(`.list_message .${receiverUserId}`).hasClass('selected')) {
+                $(`.list_message .${receiverUserId}`).addClass('Unread');
+            }
            // console.log("Tin nhắn từ " + senderId + ": " + message);
     };
 }
