--- a/PPl3/Areas/User/Views/HomeUser/Index.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/Index.cshtml
@@ -239,10 +239,14 @@
                                 <span class="logo_shield"><i class="fa-solid fa-shield"></i></span>
                                 <span class="name_seller">@p_host.user_personalInfor.FirstOrDefault().legal_name</span>
                                 <div class="contact_seller">
-                                    <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
+                                    <div class="evaluate_message_btn">
+                                        <button onclick="window.location.href = '/user/homeuser/addFriend?userID=@p_host.id'">Message Host</button>
+                                    </div>
+                                    @*<a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
                                     <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
                                     <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
-                                    <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
+                                    <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>*@
+
                                 </div>
                                 <div class="page_arrow">
                                     <button class="page_left_1_btn"><i class="fa-solid fa-chevron-left"></i></button>
