--- a/PPl3/ExtraFiles/assets/css/message.css
+++ b/PPl3/ExtraFiles/assets/css/message.css
@@ -329,8 +329,9 @@ html{
 }
 
 .Unread {
-    border : 1px solid red;
-    padding : 5px;
-    margin: 5px 0px;
-
+    border: 4px solid #007bff;
+    background-color: #e7f1ff;
+    font-weight: bold;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
+
