Finished editing the discount + fee section

--- a/PPl3/Areas/User/Views/HomeUser/ChatUser.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/ChatUser.cshtml
@@ -78,7 +78,7 @@
 
                         <div class="sub_nav sub_nav_user js_sub_nav_user">
                             <ul class="menu_user js_menu_user">
-                                <li class=""><a href="">Messages</a></li>
+                                <li class=""><a href="/user/homeuser/chatuser">Messages</a></li>
                                 <li class=""><a href="/user/homeuser/notification">Notifications</a></li>
                                 <li class=""><a href="/user/homeuser/trip">Trip</a></li>
                                 <li class=""><a href="/user/homeuser/wishlist">Wishlist</a></li>
@@ -270,7 +270,7 @@
         </div>
     </div>
 
-    <script src="~/ExtraFiles/JS/message.js?v=6"></script>
+    <script src="~/ExtraFiles/JS/message.js?v=7"></script>
     <script src="~/ExtraFiles/JS/menuGuest.js"></script>
     <script src="~/Scripts/jquery-3.7.1.js"></script>
     <script src="~/Scripts/jquery-3.7.1.min.js"></script>
